--- a/.github/workflows/firebase-app-distribution.yml
+++ b/.github/workflows/firebase-app-distribution.yml
@@ -8,6 +8,11 @@ on:
       - develop
       - release/**
   
+  # Trigger on pull requests to any branch
+  pull_request:
+    branches:
+      - '**'
+  
   # Manual trigger from any branch
   workflow_dispatch:
     inputs:
