--- a/firebase-distribution.properties
+++ b/firebase-distribution.properties
@@ -2,10 +2,10 @@
 # Edit these values to change default distribution settings
 
 # Default tester emails (comma-separated)
-firebase.appDistribution.testers=piyush.k@zebpay.com
+firebase.appDistribution.testers="piyush.k@zebpay.com"
 
 # Default tester groups (comma-separated)
-firebase.appDistribution.groups=QA
+firebase.appDistribution.groups="QA"
 
 # App ID (optional - auto-detected from google-services.json if not set)
 # firebase.appDistribution.appId=1:123456789:android:abcdef
